--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,178 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PA1_template"
+author: "Jie_Ren"
+date: "13/02/2018"
+output: html_document
 ---
 
+**Default setting**
+
+```{r setup, message = FALSE, warning = FALSE}
+knitr::opts_chunk$set(
+  message = FALSE,
+  warning = FALSE,
+  echo=TRUE,
+  error = FALSE,
+  fig.align = "center"
+)
+
+setwd("~/Desktop/5922/R")
+library(ggplot2)
+library(scales)
+library(Hmisc)
+library(gridExtra)
+```
 
 ## Loading and preprocessing the data
-
-
+### 1. Reading in the dataset and/or processing the data
+```{r}
+activity <- read.csv("activity.csv", header = T)
+# Remove na rows 
+activityona <- na.omit(activity)
+activityona$date <- as.Date(activityona$date, format="%d/%m/%y")
+```
 
 ## What is mean total number of steps taken per day?
+### 1. Make a histogram of the total number of steps taken each day 
+```{r}
 
+# Calculate the total number of steps taken per day
+activitysum <- aggregate(activityona["steps"], by=activityona["date"], sum)
 
+# Make a histogram of the total number of steps taken each day
+as <- ggplot(data = activitysum, aes(x = date, y = steps))
+as + geom_bar(stat = "identity")
+
+# Method 1
+plot(activitysum$date, activitysum$steps, type="h", main="Histogram of Daily Steps",xlab="Date", ylab="Steps per Day", col="black", lwd=8)
+
+# Method 2
+ggplot(activitysum, aes(x=date, y=steps)) + 
+        geom_bar(stat="identity", fill = "blue") +
+        ggtitle("Histogram of Daily Steps") +
+        ylab("Steps per Day") + 
+        xlab("Date") + 
+        theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+### 2. Calculate and report the mean and median total number of steps taken per day
+```{r}
+# Daily result
+## Method 1
+stepmedian<- aggregate(activityona["steps"], by=activityona["date"], median)
+stepmedian
+stepmean <- aggregate(activityona["steps"], by=activityona["date"], mean)
+stepmean
+## Method 2
+aggregate(steps ~ date, data = activityona, summary)
+
+# Total result
+mean(activitysum$steps)
+median(activitysum$steps)
+```
 
 ## What is the average daily activity pattern?
+### 1. Time series plot of the average number of steps taken
+```{r}
+activityave <- aggregate(x=list(meanSteps=activity$steps),
+                                      by=list(interval=activity$interval), FUN=mean, na.rm=TRUE)
+ggplot(activityave, aes(x = interval, y = meanSteps)) + 
+        geom_line() + 
+        ggtitle("Time series plot for average steps taken") +
+        xlab("5-minute interval") +
+        ylab("Average number of steps taken")
+```
 
-
+### 2. The 5-minute interval that, on average, contains the maximum number of steps
+```{r}
+MostSteps <- which.max(activityave$meanSteps)
+cat("The row that contaisn maximum number of steps =",MostSteps)
+timeMostSteps <-  gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", activityave[MostSteps,'interval'])
+cat("The time that contaisn maximum number of steps =",timeMostSteps)
+```
 
 ## Imputing missing values
+### 1. Calculate and report the total number of missing values in the dataset
+```{r}
+# Method 1
+nano1 <- sapply(activity, function(x) sum(is.na(x)))
+# Method 2
+nano2 <- sum(is.na(activity$steps))
+cat("Total number of missing values in the dataset",nano2)
+```
+The total number of missing values in the dataset is 2304 rows.
 
+### 2. filling in all of the missing values in the dataset.
+### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+I decided to fill in all the NAs with the average value. 
+```{r}
+imputed <- activity
+imputed$steps <- impute(activity$steps, fun=mean)
+
+# Test total number of missing value
+cat("Test total number of missing values =",sum(is.na(imputed$imputed_steps)))
+```
+
+### 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+
+```{r}
+imputedsum <- aggregate(imputed["steps"], by=imputed["date"], sum)
+ggplot(imputedsum, aes(x=date, y=steps)) + 
+        geom_bar(stat="identity", fill = "blue") +
+        ggtitle("Histogram of Daily Steps (Imputed)") +
+        ylab("Steps per Day") + 
+        xlab("Date") + 
+        theme(axis.text.x = element_text(angle = 90, hjust = 1))
+mean(imputedsum$steps)
+median(imputedsum$steps)
+```
+**Do these values differ from the estimates from the first part of the assignment?**
+The mean is same as the previous part (10766.19). However, the median is now different. Previous median is 10765 and now changed to 10766.19.
+
+**What is the impact of imputing missing data on the estimates of the total daily number of steps?**
+The distribution of histogram is changed. 
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+### 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+```{r}
+activityweek <- activityona
+activityweek$weektime <- as.factor(ifelse(weekdays(activityona$date) %in% c("Saturday","Sunday"),"weekend", "weekday"))
+
+Weekday <- subset(activityweek, weektime=="weekday")
+Weekend <- subset(activityweek, weektime=="weekend")
+```
+
+### 2.Make a panel plot containing a time series plot (i.e. ) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+```{r}
+# Weekday Histogram
+Weekdayave <- aggregate(x=list(meanSteps=Weekday$steps),
+                                      by=list(interval=Weekday$interval), FUN=mean, na.rm=TRUE)
+WeekdayH <- ggplot(Weekdayave, aes(x = interval, y = meanSteps)) + 
+        geom_line() + 
+        ggtitle("Time series plot for average steps taken in Weekday") +
+        xlab("5-minute interval") +
+        ylab("Average number of steps taken")
+
+# Weekend Histogram
+Weekendave <- aggregate(x=list(meanSteps=Weekend$steps),
+                                      by=list(interval=Weekend$interval), FUN=mean, na.rm=TRUE)
+WeekendH <- ggplot(Weekendave, aes(x = interval, y = meanSteps)) + 
+        geom_line() + 
+        ggtitle("Time series plot for average steps taken in Weekend") +
+        xlab("5-minute interval") +
+        ylab("Average number of steps taken")
+
+# Compare two time series together
+grid.arrange(WeekdayH, WeekendH, nrow = 2)
+
+# Method 2
+activityweekave <- aggregate(steps ~ interval + weektime, data=activityweek, mean)
+ggplot(activityweekave, aes(interval, steps)) + 
+        geom_line() + 
+        ggtitle("Time series plot in Weekday & Weekend") + 
+        facet_grid(weektime ~ .) +
+        xlab("5-minute interval") + 
+        ylab("avarage number of steps")
+
+```
