--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,7 @@
 title: "PA1_template"
 author: "Jie_Ren"
 date: "13/02/2018"
-output: html_document 
+output: github_document
 ---
 
 **Default setting**
